# house-of-silent-agents

./: .gitignore  1D_room.py  README.md  game.py  generate_log.py  hello.py  log_and_plot.py  main.py  message_log.html  pyproject.toml  results_log.html
agents/: agent.py  response_parser.py
agents/api_chat_methods/: ollama_chat.py  openai_chat.py
logs/: results_for_report.html  results_log.html  results_log2.html  results_log3.html
old_version/: README.md  game.py  main.py
old_version/agents/: response_parser.py
old_version/agents/generate_with_api_funcs/: ollama_generate.py  openai_generate.py
old_version/logs/: results1.html
old_version/rooms/: __init__.py  one_D_room.py  room.py
